
export const assetsInfo = {
  'BTC': {
    name: 'Bitcoin',
    type: 'crypto',
    decimalPlaces: 8,
    displaySymbol: 'BTC',
    displayString: 'BTC (Bitcoin)',
  },
  'ETH': {
    name: 'Ethereum',
    type: 'crypto',
    decimalPlaces: 8,
    displaySymbol: 'ETH',
    displayString: 'ETH (Ethereum)',
  },
  'EUR': {
    name: 'Euro',
    type: 'fiat',
    decimalPlaces: 2,
    displaySymbol: 'EUR',
    displayString: 'EUR (Euro)',
  },
  'GBP': {
    name: 'British Pound',
    type: 'fiat',
    decimalPlaces: 2,
    displaySymbol: 'GBP',
    displayString: 'GBP (British Pound)',
  },
  'LTC': {
    name: 'Litecoin',
    type: 'crypto',
    decimalPlaces: 8,
    displaySymbol: 'LTC',
    displayString: 'LTC (Litecoin)',
  },
  'XRP': {
    name: 'Ripple',
    type: 'crypto',
    decimalPlaces: 8,
    displaySymbol: 'XRP',
    displayString: 'XRP (Ripple)',
  }
}

export default assetsInfo;
