...
            <Text style={styles.retryButtonText}>Retry</Text>
          </TouchableOpacity>
        </View>
      ) : (
        <>
          {/* Tab Header */}
          <View style={styles.tabContainer} testID="address-book-root">
            <TouchableOpacity
              style={[styles.tab, activeTab === 'list' && styles.activeTab]}
              onPress={() => setActiveTab('list')}
            >
              <Icon
                name="format-list-bulleted"
...
                Address List
              </Text>
            </TouchableOpacity>

            <TouchableOpacity
              style={[styles.tab, activeTab === 'add' && styles.activeTab]}
              testID="address-book-add-tab"
              onPress={() => {
                setActiveTab('add');
              }}
            >
              <Icon
                name="plus"
...
